<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    
    <groupId>org.onebeartoe.genai.gemini</groupId>
    <artifactId>developer-openscad</artifactId>    
    <version>1.0</version>
    

    <packaging>jar</packaging>

    <properties>
        <exec.mainClass>org.onebeartoe.genai.openscad.OpenscadHeartCoaster</exec.mainClass>
        <maven.compiler.release>25</maven.compiler.release>
    </properties>
    
    <name>onebeartoe-genai-developer-openscad</name>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
    <dependencies>
        <dependency>
            <groupId>org.onebeartoe</groupId>
            <artifactId>prompts</artifactId>
            <version>1.0</version>
        </dependency>
        
        <dependency>
            <groupId>io.github.glaforge</groupId>
            <artifactId>gemini-interactions-api-sdk</artifactId>
            <version>0.8.0</version>
        </dependency>        
    </dependencies>
</project>
